// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UpgradeButton should display with custom callback 1`] = `
<div
  class="button-class"
>
  <div
    class="d-flex align-items-center upgradeLink"
  >
    <button
      aria-disabled="false"
      class="ui-button-wrapper-cef1 ui-button-fill-cef1 ui-button-primary-cef1"
      type="button"
    >
      <span
        class="ui-button-content-cef1"
      >
        <span
          class="wrapper"
        >
          a label
          <i
            class="material-icons icon isRight medium"
          >
            bolt
          </i>
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`UpgradeButton should display with custom props 1`] = `
<div
  class="button-class"
>
  <div
    class="d-flex align-items-center upgradeLink"
  >
    <a
      to="[object Object]"
    >
      <button
        aria-disabled="false"
        class="ui-button-wrapper-cef1 ui-button-fill-cef1 ui-button-primary-cef1"
        type="button"
      >
        <span
          class="ui-button-content-cef1"
        >
          <span
            class="wrapper"
          >
            a label
            <i
              class="material-icons icon isRight medium"
            >
              bolt
            </i>
          </span>
        </span>
      </button>
    </a>
  </div>
</div>
`;

exports[`UpgradeButton should display with default props 1`] = `
<div>
  <div
    class="d-flex align-items-center upgradeLink"
  >
    <a
      to="[object Object]"
    >
      <button
        aria-disabled="false"
        class="ui-button-wrapper-cef1 ui-button-fill-cef1 ui-button-primary-cef1"
        type="button"
      >
        <span
          class="ui-button-content-cef1"
        >
          <span
            class="wrapper"
          >
            Upgrade
            <i
              class="material-icons icon isRight medium"
            >
              bolt
            </i>
          </span>
        </span>
      </button>
    </a>
  </div>
</div>
`;
